# hydra-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cp/: package-lock.json  package.json
cp/public/: design.html  index.html  main.css
cp/public/js/: custom.js  design.js  main.js
cp/src/: index.js  script.js
dependencies/: install_boost.sh  install_hiredis.sh  install_mongo.sh
samples/: base.js  rule.js  script_a.js  script_b.js  script_c.js
scripts/: AuthChecker.js  XPTO.js
scripts/auth/: AuthChecker.js  TesteScripts.js
scripts/auth/teste/: Checker.js
scripts/flow/: HTTPHandler.js
src/: HydraEngine.cpp  HydraEngine.h  Main.cpp
src/bindings/: Async.cpp  Async.h  Console.cpp  Console.h  HTTPClient.cpp  HTTPClient.h
src/dao/: MongoDAO.cpp  MongoDAO.h
src/entities/: ScriptEntity.h
src/ports/http/: HTTPServer.cpp  HTTPServer.h  listener.cpp  listener.h  session.cpp  session.h
